<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Dragonmaid Computer</string>
    <string name="sell">Jual</string>
    <string name="quantity">Jumlah dalam persediaan:<font color='#FF0000'>*</font></string>
    <string name="quantity_req">Masukkan jumlah barang<font color='#FF0000'>*</font></string>
<!--    list item-->
    <string name="item_name">Nama barang<font color='#FF0000'>*</font></string>
    <string name="item_price_req">Harga barang<font color='#FF0000'>*</font></string>
    <string name="save_action">Simpan</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="harga">Harga</string>
<!--    item code-->
    <string name="item_code">Kode Barang</string>
    <string name="code_req">Kode barang</string>
    <string name="item_code_req">Kode barang<font color='#FF0000'>*</font></string>
    <string name="barang">Barang</string>
    <string name="hapus">Hapus</string>
    <string name="delete_question">Hapus barang dari daftar?</string>
    <string name="no">Tidak</string>
    <string name="yes">Iya</string>
    <string name="currency_symbol">Rp</string>
    <string name="edit_item">Edit</string>
    <string name="tambah_barang">Tambahkan Barang Baru</string>
</resources>